<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center">

        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/add"
                android:background="@drawable/cycle_green"
                android:id="@+id/add"
                android:layout_margin="10dp"
        />
        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:text="@string/sort"
                android:background="@drawable/cycle_oreng"
                android:id="@+id/sort"
        />
        <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:text="@string/delete"
                android:background="@drawable/cycle_red"
                android:id="@+id/delete"
        />

    </LinearLayout>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/listXT"
    />
</LinearLayout>